k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: machina-frontend-boilerplate
spec:
  selector:
    app: machina-frontend-boilerplate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
