k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: machina-frontend-boilerplate
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - machina-frontend-boilerplate.org.machina.gg
      secretName: wildcard-org-machina-tls
  rules:
    - host: machina-frontend-boilerplate.org.machina.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: machina-frontend-boilerplate
                port:
                  number: 80
